--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,35 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+
+
+}
+body::-webkit-scrollbar {
+  width: 8px;
 }
 
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2); /* Semi-transparent */
+  border: 1px solid #d3d3d3; /* Light gray border */
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.3); /* Slightly less transparent on hover */
+  border-color: #a9a9a9; /* Darker gray border on hover */
+}
+
+body::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Slightly darker track */
+  border-radius: 10px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*{
+  margin: 0;
+  padding: 0;
+
 }
